--- a/FBSD-10.1/Vagrantfile
+++ b/FBSD-10.1/Vagrantfile
@@ -1,5 +1,5 @@
 # -*- mode: ruby -*-
-# vi: set ft=ruby :
+# vi: set expandtab sw=2 ts=2 ft=ruby :
 
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
@@ -68,4 +68,23 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
   # SHELL
+  
+  # TODO: Replace this crap with something better
+  config.vm.provision 'shell', inline: 'mkdir ~/bin'
+  config.vm.provision 'file', source: '~/bin/netskel*', destination: '~/bin'
+  config.vm.provision 'file', source: '~/.netskelrc', destination: '~'
+  config.vm.provision "shell", inline: "bin/netskel_sync"
+
+  config.vm.provision "shell", inline: <<-SHELL
+    freebsd-update fetch
+    freebsd-update install
+    pkg update
+    pkg upgrade
+  SHELL
+
+  (93..94).each do |ver|
+    ["contrib", "plperl"].each do |opt|
+      config.vm.provision "shell", inline: "pkg install postgresql#{ver}-#{opt}"
+    end
+  end
 end
